--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url = https://sammyleejuni-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url = https://sentianalyzer.1ora5dfi43n7.us-south.codeengine.appdomain.cloud
+sentiment_analyzer_url = https://sentianalyzer.1osmjo8oviwj.us-south.codeengine.appdomain.cloud
