--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url = https://sammyleejuni-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url = https://sentianalyzer.1ounmd3ps12r.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url = https://sentianalyzer.1ows8m48me7n.us-south.codeengine.appdomain.cloud/
